force-app/main/default/objects/AsyncRequest__c/AsyncRequest__c.object-meta.xml
<CustomObject>
    <description>Used for logging Async requests to be processed.</description>
    <label>AsyncRequest</label>
    <nameField>
        <displayFormat>ASYNC-{0000000}</displayFormat>
        <label>AsyncRequest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>