force-app/main/default/objects/AsyncRequest__c/fields/AsyncType__c.field-meta.xml
<CustomField>
    <fullName>AsyncType__c</fullName>
    <label>AsyncType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AppAdmin_AssetSync</fullName>
            </value>
            <value>
                <fullName>AppAdmin_HGSync</fullName>
            </value>
            <value>
                <fullName>AppAdmin_OppSync</fullName>
            </value>
            <value>
                <fullName>Contract_Email</fullName>
            </value>
            <value>
                <fullName>Process_Dist_Group</fullName>
            </value>
            <value>
                <fullName>ProdSub_AfterInsert</fullName>
            </value>
            <value>
                <fullName>Set_DQ_Delete_CI</fullName>
            </value>
            <value>
                <fullName>Task_ADR_CI</fullName>
            </value>
            <value>
                <fullName>Update_Opp_Stage_Demo_Completed</fullName>
            </value>
            <value>
                <fullName>Update_Opp_Stage_Demo_Scheduled</fullName>
            </value>
            <value>
                <fullName>Create_CI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>