force-app/main/default/objects/AsyncRequest__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <description>Used for storing the Attachment ID for the PDF contract</description>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>