force-app/main/default/objects/AsyncRequest__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>