force-app/main/default/objects/AsyncRequest__c/fields/RequestedEmail__c.field-meta.xml
<CustomField>
    <fullName>RequestedEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the contract process email. Customers can choose to not receive the email.</description>
    <label>RequestedEmail</label>
    <type>Checkbox</type>
</CustomField>