force-app/main/default/objects/AsyncRequest__c/fields/Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempts__c</fullName>
    <description>After Number of Attempts gets to 6, waits an hour and retries.</description>
    <label>Retry Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>